cleaned up ui, re-added online list

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,8 @@
         Join Game
     </button>
 
+    <div style="clear: both;"></div>
+
     <div id="chessclock"><div id="white_time"></div><div id="black_time"></div></div>
     <div id="gameInfo"></div>
 
@@ -28,9 +30,9 @@
 <!--     <div id="log_container">
         <ol id="log"></ol>
         <input id="textinput" class="boxsizingBorder" placeholder=">"></textarea>
-    </div>
+    </div> -->
 
-    <ol id="clients" class="list-inline"></ol> -->
+    Users online:<ol id="clients" class="list-inline"></ol>
 
 
     Using <a href="http://chessboardjs.com">chessboard.js</a> and <a href="https://github.com/jhlywa/chess.js">chess.js</a>.
