--- a/public/index.html
+++ b/public/index.html
@@ -7,25 +7,28 @@
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/chessboardjs/css/chessboard-0.3.0.css">
     
-    <link rel="stylesheet" href="omni.css"> <!-- TODO: it would be nice to include above stylesheets in this -->
+    <link rel="stylesheet" href="main.css"> <!-- TODO: it would be nice to include above stylesheets in this -->
 </head>
 <body>
 <div class="container">
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"></div>
 
-    <div id="userInfo"></div>
+    <div id="topBar">
+        <div id="userContainer">
+            <div id="userInfo"></div>
+            <button id="logoutButton" class="btn btn-danger">Log Out</button>
+        </div>
 
-    <button class="btn btn-success joingame has-spinner">
-        <span class="spinner"><i class="fa fa-refresh fa-spin"></i></span>
-        Join Game
-    </button>
-
-    <div style="clear: both;"></div>
+        <button class="btn btn-success joingame has-spinner">
+            <span class="spinner"><i class="fa fa-refresh fa-spin"></i></span>
+            Join Game
+        </button>
+        <div style="clear: both;"></div>
+    </div>
 
     <div id="chessclock"><div id="white_time"></div><div id="black_time"></div></div>
     <div id="gameInfo"></div>
-
-    <div id="board" aria-labelledby="myModalLabel" aria-hidden="true"></div>
+    <div id="board"></div>
     
 <!--     <div id="log_container">
         <ol id="log"></ol>
