--- a/public/index.html
+++ b/public/index.html
@@ -15,20 +15,12 @@
 
     <nav id="topBar" class="only-visible-if-logged-in navbar navbar-default" role="navigation">
         <div class="container-fluid">
-<!--             <div class="navbar-header">
-                <a class="navbar-brand" href="#">PawnChain.net</a>
-            </div> -->
-
             <div id="userContainer">
                 <div id="userInfo"></div>
                 <button id="logoutButton" class="btn btn-danger navbar-btn">Log Out</button>
             </div>
 
             <div class="only-display-if-not-in-game">
-                <button id="cancelReady" disabled=true class="start btn btn btn-danger navbar-btn">
-                    Cancel
-                </button>
-
                 <button id="joinPractice" class="start btn btn btn-warning navbar-btn has-spinner">
                     <span class="spinner"><i class="fa fa-refresh fa-spin"></i></span>
                     Practice
@@ -38,11 +30,18 @@
                     <span class="spinner"><i class="fa fa-refresh fa-spin"></i></span>
                     Join Game
                 </button>
+
+                <button id="cancelReady" style="display: none;" class="start btn btn btn-danger navbar-btn">
+                    Cancel
+                </button>
             </div>
         </div>
     </nav>
 
-    <div id="chessclock" class="only-display-if-in-game"><span id="white_time"></span> <i class="fa fa-clock-o"></i> <span id="black_time"></span></div>
+    <div id="chessclock" class="only-display-if-in-game">
+        <span id="white_time"></span> <i class="fa fa-clock-o"></i> <span id="black_time"></span>
+    </div>
+
     <div id="board"></div>
 
     <span class="only-visible-if-logged-in">
