added text indicating that it is the player's turn. Trying out managing UI state with classes added to body

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 
     <div id="chessclock" class="only-display-if-in-game">
         <span id="white_time"></span> <i class="fa fa-clock-o"></i> <span id="black_time"></span>
+        <span id="your_turn">Your Turn</span>
     </div>
 
     <div id="board"></div>
@@ -47,15 +48,6 @@
     <span class="only-visible-if-logged-in">
         Users online:<ol id="clients" class="list-inline"></ol>
     </span>
-
-
-    <div class="only-display-if-logged-in">
-    You are logged in.
-    </div>
-
-    <div class="only-display-if-logged-out">
-    You are logged out.
-    </div>
 
 
     Using <a href="http://chessboardjs.com">chessboard.js</a> and <a href="https://github.com/jhlywa/chess.js">chess.js</a>.
