resizing chess board for smaller devices, made clock more noticable

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,15 @@
         </div>
     </nav>
 
-    <div id="chessclock" class="only-display-if-in-game">
-        <span id="white_time"></span> <i class="fa fa-clock-o"></i> <span id="black_time"></span>
-        <span id="your_turn">Your Turn</span>
+    <div id="boardHeader" class="only-display-if-in-game">
+        <div id="chessclock" class="panel panel-default">
+            <!-- <div class="panel-body">   -->
+                <span id="white_time"></span> <i class="fa fa-clock-o"></i> <span id="black_time"></span>
+            <!-- </div> -->
+        </div>
     </div>
+
+    <!-- <span id="your_turn">Your Turn</span> -->
 
     <div id="board"></div>
 
