readded font awesome, forgot it was still needed for refresh icon

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <title>PawnChain: Online Chess</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="libs/bootstrap-3.2.0-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/chessboardjs/css/chessboard-0.3.0.css">
     <link rel="stylesheet" href="main.css"> <!-- TODO: it would be nice to include above stylesheets in this -->
 </head>
