added ability to step through the previous game

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,13 @@
 
     <div id="board"></div>
 
+    <div id="historyButtons" class="only-display-after-game">
+        <div class="btn-group">
+            <button id="prev" class="btn btn-default">Prev</button>
+            <button id="next" class="btn btn-default">Next</button>
+        </div>
+    </div>
+    
     <span class="only-visible-if-logged-in">
         Users online:<ol id="clients" class="list-inline"></ol>
     </span>
